[gd_scene load_steps=7 format=3 uid="uid://dah2wgypumw50"]

[ext_resource type="Script" uid="uid://d3tinie4p7142" path="res://scenes/main_menu.gd" id="1_ucygd"]
[ext_resource type="Texture2D" uid="uid://bgb67yjmtday4" path="res://assets/ui/Simulacrum(1)(1)-export.png" id="2_ucygd"]
[ext_resource type="Script" uid="uid://b6qapnl5v8owt" path="res://scripts/fusion_tutorial_button.gd" id="3_ucygd"]
[ext_resource type="Texture2D" uid="uid://cr6xyl01pogv" path="res://assets/main_menu/version.png" id="5"]

[sub_resource type="LabelSettings" id="LabelSettings_ow34m"]
font_size = 56

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ow34m"]
size = Vector2(1, 64)

[node name="MainMenu" type="MarginContainer"]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 0
script = ExtResource("1_ucygd")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1280, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture_repeat = 2

[node name="Parallax2D2" type="Parallax2D" parent="."]
repeat_size = Vector2(1280, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D2"]
texture_repeat = 2

[node name="Parallax2D3" type="Parallax2D" parent="."]
repeat_size = Vector2(1280, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D3"]
texture_repeat = 2

[node name="Parallax2D4" type="Parallax2D" parent="."]
repeat_size = Vector2(1280, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D4"]
texture_repeat = 2

[node name="Parallax2D5" type="Parallax2D" parent="."]
repeat_size = Vector2(1280, 0)
repeat_times = 10

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D5"]
texture_repeat = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_ucygd")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer/Logo"]
layout_mode = 0
offset_left = -251.0
offset_top = 297.0
offset_right = 1029.0
offset_bottom = 353.0
text = "New Game"
label_settings = SubResource("LabelSettings_ow34m")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("PlaceholderTexture2D_ow34m")
stretch_mode = 3
script = ExtResource("3_ucygd")

[node name="Version" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5")
stretch_mode = 3
